# protein_interactor_prediction

./: .gitignore  04_data_leakage_analysis.ipynb  05_model_evaluation.ipynb  06_proteome_prediction.ipynb  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
notebooks/: 01_data_collection_and_filtering.ipynb  02_feature_engineering.ipynb  03_model_development.ipynb  04_data_leakage_analysis.ipynb  05_model_evaluation.ipynb  06_proteome_prediction.ipynb
src/ppi/: __init__.py  cli.py  data_contract.py  demo_data.py  eval.py  features.py  models.py  settings.py
tests/: __init__.py  test_data_contract.py  test_demo_data.py  test_demo_learnability.py  test_features.py  test_models.py
